Alignment issue

--- a/frontend/src/components/viewShipment/style.scss
+++ b/frontend/src/components/viewShipment/style.scss
@@ -10,4 +10,7 @@
     .trackBtn{
       padding: 0.7rem 3rem;
     }
+    .shadow{
+      border-radius: 1rem;
+    }
 }
